<resources>
    <string name="app_name">Mathematics</string>
    <string name="CombinatoricsDescription">combinatorics Image Button</string>
    <string name="MatrixDescription">Matrices Image Button</string>
    <string name="MainFormulasDescription">combinatorics Image Button</string>
    <string name="GuideDescription">combinatorics Image Button</string>

    <!-- combinatorics page-->
    <string name="factorial">Факториал</string>
    <string name="combinations">Перестановки</string>
    <string name="confirm_button">Подтвердить</string>
    <string name="elements">Элементы</string>
    <string name="enter_elements">Введите элементы</string>
    <string name="count">Длина</string>
    <string name="fill_1">1</string>
    <string name="enter_number">Введите число</string>
    <string name="placement">Размещение</string>
    <string name="combination">Сочетания</string>
    <string name="a">A</string>
    <string name="c">C</string>
</resources>