<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatrixView"
    tools:ignore="LabelFor"
    android:background="@drawable/gradient_main_bg">

    <RelativeLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="-5dp"
        android:background="@drawable/item_main_menu"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <ImageButton
                android:id="@+id/CombinatoricsButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/CombinatoricsDescription"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/img_combinatorics_2" />

            <ImageButton
                android:id="@+id/MatricesButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/MatrixDescription"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/img_matrices_1" />

            <ImageButton
                android:id="@+id/MainFormulasButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/MainFormulasDescription"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/img_main_formulas_1" />

            <ImageButton
                android:id="@+id/GuideButton"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/GuideDescription"
                android:layoutDirection="rtl"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/img_guide_1" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>