<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CombinatoricsView"
    tools:ignore="LabelFor"
    android:background="@drawable/gradient_main_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="5dp"
                    android:text="@string/factorial"
                    android:textColor="@color/gray_1"
                    android:textSize="24sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <EditText
                            android:id="@+id/factorialInput"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:background="@drawable/item_input_text_bg"
                            android:maxWidth="100dp"
                            android:maxLength="4"
                            android:minWidth="50dp"
                            android:paddingHorizontal="10dp"
                            android:textColor="@color/gray_2"
                            android:textSize="24sp"
                            android:inputType="number"
                            android:contentDescription="@string/enter_number"/>

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="match_parent"/>

                        <ImageButton
                            android:id="@+id/factorialConfirmInputButton"
                            android:layout_width="50dp"
                            android:layout_height="40sp"
                            android:layout_marginVertical="10dp"
                            android:scaleType="centerInside"
                            android:backgroundTint="@color/purple_2"
                            android:contentDescription="@string/confirm_button"
                            app:srcCompat="@drawable/icon_confirm_convert_button"/>

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:id="@+id/factorialResult"
                            android:layout_width="wrap_content"
                            android:minWidth="50dp"
                            android:layout_height="35dp"
                            android:maxWidth="200dp"
                            android:paddingHorizontal="10dp"
                            android:textSize="24sp"
                            android:textColor="@color/gray_2"
                            android:background="@drawable/item_input_text_bg"/>

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="5dp"
                    android:text="@string/placement"
                    android:textColor="@color/gray_1"
                    android:textSize="24sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/placementTopInput"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:background="@drawable/item_input_text_bg"
                            android:maxWidth="100dp"
                            android:maxLength="4"
                            android:minWidth="50dp"
                            android:paddingHorizontal="10dp"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/gray_2"
                            android:textSize="24sp"
                            android:inputType="number"
                            android:contentDescription="@string/enter_number"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/gray_0"
                                android:textSize="50sp"
                                android:layout_marginBottom="-10dp"
                                android:layout_marginTop="-15dp"
                                android:text="@string/a"/>

                            <Space
                                android:layout_width="20sp"
                                android:layout_height="match_parent"/>

                            <ImageButton
                                android:id="@+id/placementConfirmInputButton"
                                android:layout_width="50dp"
                                android:layout_height="40sp"
                                android:scaleType="centerInside"
                                android:backgroundTint="@color/purple_2"
                                android:contentDescription="@string/confirm_button"
                                app:srcCompat="@drawable/icon_confirm_convert_button"/>

                            <Space
                                android:layout_width="20sp"
                                android:layout_height="match_parent"/>

                            <TextView
                                android:id="@+id/placementResult"
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                android:background="@drawable/item_input_text_bg"
                                android:maxWidth="200dp"
                                android:minWidth="50dp"
                                android:paddingHorizontal="10dp"
                                android:textColor="@color/gray_2"
                                android:textSize="24sp" />

                        </LinearLayout>

                        <EditText
                            android:id="@+id/placementBottomInput"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:background="@drawable/item_input_text_bg"
                            android:maxWidth="100dp"
                            android:maxLength="4"
                            android:minWidth="50dp"
                            android:paddingHorizontal="10dp"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/gray_2"
                            android:textSize="24sp"
                            android:inputType="number"
                            android:contentDescription="@string/enter_number"/>

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="5dp"
                    android:text="@string/combination"
                    android:textColor="@color/gray_1"
                    android:textSize="24sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/combinationTopInput"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:background="@drawable/item_input_text_bg"
                            android:maxWidth="100dp"
                            android:maxLength="4"
                            android:minWidth="50dp"
                            android:paddingHorizontal="10dp"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/gray_2"
                            android:textSize="24sp"
                            android:inputType="number"
                            android:contentDescription="@string/enter_number"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/gray_0"
                                android:textSize="50sp"
                                android:layout_marginBottom="-10dp"
                                android:layout_marginTop="-15dp"
                                android:text="@string/c"/>

                            <Space
                                android:layout_width="20sp"
                                android:layout_height="match_parent"/>

                            <ImageButton
                                android:id="@+id/combinationConfirmInputButton"
                                android:layout_width="50dp"
                                android:layout_height="40sp"
                                android:scaleType="centerInside"
                                android:backgroundTint="@color/purple_2"
                                android:contentDescription="@string/confirm_button"
                                app:srcCompat="@drawable/icon_confirm_convert_button"/>

                            <Space
                                android:layout_width="20sp"
                                android:layout_height="match_parent"/>

                            <TextView
                                android:id="@+id/combinationResult"
                                android:layout_width="wrap_content"
                                android:minWidth="50dp"
                                android:layout_height="35dp"
                                android:maxWidth="200dp"
                                android:paddingHorizontal="10dp"
                                android:textSize="24sp"
                                android:textColor="@color/gray_2"
                                android:background="@drawable/item_input_text_bg"/>

                        </LinearLayout>

                        <EditText
                            android:id="@+id/combinationBottomInput"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:background="@drawable/item_input_text_bg"
                            android:maxWidth="100dp"
                            android:maxLength="4"
                            android:minWidth="50dp"
                            android:paddingHorizontal="10dp"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/gray_2"
                            android:textSize="24sp"
                            android:inputType="number"
                            android:contentDescription="@string/enter_number"/>

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="5dp"
                    android:text="@string/combinations"
                    android:textColor="@color/gray_1"
                    android:textSize="24sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/elements"
                            android:textSize="12sp"
                            android:textColor="@color/gray_0"/>

                        <EditText
                            android:id="@+id/inputElements"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:background="@drawable/item_input_text_bg"
                            android:contentDescription="@string/enter_elements"
                            android:inputType="text"
                            android:maxWidth="120sp"
                            android:minWidth="60dp"
                            android:paddingHorizontal="10dp"
                            android:textColor="@color/gray_2"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/count"
                            android:textSize="12sp"
                            android:textColor="@color/gray_0"/>

                        <EditText
                            android:id="@+id/countOfInputElements"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:background="@drawable/item_input_text_bg"
                            android:maxWidth="120sp"
                            android:minWidth="60dp"
                            android:paddingHorizontal="10dp"
                            android:textColor="@color/gray_2"
                            android:textSize="24sp"
                            android:inputType="number"
                            android:contentDescription="@string/enter_number"
                            android:autofillHints="1" />

                    </LinearLayout>

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent"/>

                    <ImageButton
                        android:id="@+id/combinationsConfirmInputButton"
                        android:layout_width="50dp"
                        android:layout_height="40sp"
                        android:layout_marginVertical="10dp"
                        android:scaleType="centerInside"
                        android:backgroundTint="@color/purple_2"
                        android:contentDescription="@string/confirm_button"
                        app:srcCompat="@drawable/icon_confirm_convert_button"/>

                </LinearLayout>

                <!-- TODO create adaptive list height-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <ListView
                        android:id="@+id/listWithRepeats"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="93dp"
                        android:layout_marginEnd="5dp"
                        tools:listitem="@layout/list_item"
                         />

                    <View
                        android:id="@+id/lineBetweenLists"
                        android:layout_width="1dp"
                        android:layout_height="93dp"
                        android:visibility="invisible"
                        android:background="@color/gray_0"/>

                    <ListView
                        android:id="@+id/listWithOutRepeats"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="93dp"
                        android:layout_marginStart="5dp"
                        tools:listitem="@layout/list_item"
                        />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>